--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <canvas id="Canvas"></canvas>
         <script src="vector.js"></script>
         <script src="utils.js"></script>
+        <script src="perlin.js"></script>
         <script src="input.js"></script>
         <script src="frame.js"></script>
         <script src="listeners.js"></script>
