--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <script src="utils.js"></script>
         <script src="perlin.js"></script>
         <script src="input.js"></script>
+        <script src="chunk.js"></script>
         <script src="frame.js"></script>
         <script src="listeners.js"></script>
         <script src="init.js"></script>
